[package]
name = "maps-download-check"
version = "0.2.0"
authors = ["Paco van der Linden <pavadeli@gmail.com>"]
edition = "2021"
rust-version = "1.58"
description = "Checks the downloaded Here maps for the Jaguar I-PACE for corrupt parts."
repository = "https://github.com/pavadeli/maps-download-check"

[dependencies]
anyhow = "1.0.53"
console = "0.15.0"
indicatif = { version = "0.16.2", features = ["with_rayon"] }
md5 = "0.7.0"
quick-xml = { version = "0.22.0", features = ["serialize"] }
rayon = "1.5.1"
rfd = "0.7.0"
serde = { version = "1.0.136", features = ["derive"] }
structopt = "0.3.26"
thiserror = "1.0.30"

[profile.release]
lto = true
